--- a/sass/style.scss
+++ b/sass/style.scss
@@ -364,8 +364,6 @@ $TextBlack: #22343d;
 @media (max-width: 1000px) {
   .product {
     .container {
-      .product-menu__btn {
-      }
       .product-menu {
         grid-template-columns: repeat(3, 1fr);
         text-align: center;
@@ -400,32 +398,80 @@ $TextBlack: #22343d;
     }
   }
 }
-@media (max-width: 320px) {
-  .hero {
-    .site-hero {
-      &__right {
-      }
-    }
-  }
-}
 
 //section product
 
 // managment section
 .managment {
-  padding: 170px 0px 150px 0px;
+  padding: 150px 0px;
   .managment-section {
     display: flex;
     gap: 84px;
     &-left {
       &__content1 {
-        color: #22343d;
-        font-family: "Poppins";
+        @extend .similar;
         font-size: 16px;
         font-weight: 600;
+        margin-bottom: 8px;
+      }
+      &__content2 {
+        @extend .similar;
+        font-size: 32px;
+        font-weight: 700;
+        margin-bottom: 23px;
+      }
+      &__content3 {
+        @extend .similar;
+        width: 486px;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26px;
+        margin-bottom: 30px;
+      }
+      &__content4 {
+        @extend .similar;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 26px;
+        margin-bottom: 12px;
+      }
+      &__content5 {
+        @extend .similar;
+
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26px;
+        margin-bottom: 25px;
       }
     }
   }
 }
-
+.similar {
+  color: #22343d;
+  font-family: "Poppins";
+}
+@media (max-width: 1024px) {
+  .managment {
+    .managment-section {
+      flex-direction: column;
+      text-align: center;
+    }
+  }
+}
+@media (max-width: 768px) {
+  .managment {
+    .managment-section {
+      flex-direction: column;
+      text-align: center;
+    }
+  }
+}
+@media (max-width: 470px) {
+  .managment {
+    .managment-section {
+      flex-direction: column;
+      text-align: center;
+    }
+  }
+}
 // managment section
