--- a/sass/style.scss
+++ b/sass/style.scss
@@ -444,6 +444,9 @@ $TextBlack: #22343d;
         margin-bottom: 25px;
       }
     }
+    .managment-right img {
+      max-width: 100%;
+    }
   }
 }
 .similar {
