--- a/sass/style.scss
+++ b/sass/style.scss
@@ -867,6 +867,13 @@ $TextBlack: #22343d;
 }
 
 @media (max-width: 1138px) {
+  .footer {
+    .container {
+      .footer-card {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+  }
   .price {
     .container {
       .price-cards {
@@ -930,7 +937,7 @@ $TextBlack: #22343d;
               font-family: "Poppins";
               font-size: 14px;
               font-weight: 500;
-              line-height: 24px; /* 171.429% */
+              line-height: 24px;
               letter-spacing: 0.2px;
             }
           }
@@ -954,7 +961,7 @@ $TextBlack: #22343d;
       font-size: 16px;
       font-weight: 500;
       width: 537px;
-      line-height: 28px; /* 175% */
+      line-height: 28px;
       letter-spacing: 0.2px;
       margin-right: auto;
       margin-left: auto;
@@ -974,6 +981,13 @@ $TextBlack: #22343d;
   }
 }
 @media (max-width: 768px) {
+  .footer {
+    .container {
+      .footer-card {
+        grid-template-columns: 1fr;
+      }
+    }
+  }
   .client {
     .container {
       .client-cards {
@@ -1036,3 +1050,98 @@ $TextBlack: #22343d;
 // section conatct
 
 // section footer
+.footer {
+  max-width: 100%;
+  padding: 150px 0px 40px 0px;
+  .container {
+    .footer-bottom {
+      color: #22343d;
+      margin-right: auto;
+      margin-left: auto;
+      width: 394px;
+      font-family: "Poppins";
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 30px;
+    }
+    .footer-card {
+      &3 {
+        &__p {
+          color: #22343d;
+          font-family: "Poppins";
+          font-size: 20px;
+          font-weight: 500;
+          line-height: 30px;
+          margin-bottom: 32px;
+        }
+        &__input {
+          width: 325px;
+          height: 48px;
+          outline: none;
+          border: solid rgb(241, 234, 234);
+          margin-bottom: 24px;
+        }
+        &__btn {
+          padding: 8px 15px;
+          border-radius: 4px;
+          background: $PrimaryColor;
+          color: #fff;
+          text-align: center;
+          font-family: "Poppins";
+          font-size: 16px;
+          font-weight: 700;
+          &:hover {
+            transform: scale(1.1);
+            transition: 0.5s;
+            background-color: white;
+            color: $PrimaryColor;
+            border: 1px solid $PrimaryColor;
+          }
+        }
+      }
+      .footer-card2 {
+        .footer-card2__title {
+          color: #22343d;
+          font-family: "Poppins";
+          font-size: 20px;
+          font-weight: 500;
+          line-height: 30px;
+          margin-bottom: 10px;
+          width: 105px;
+        }
+      }
+      &1 {
+        &__grid {
+          display: flex;
+          align-items: center;
+          gap: 16px;
+          margin-top: 24px;
+        }
+      }
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 150px;
+    }
+  }
+}
+
+@media (max-width: 1100px) {
+  .footer {
+    .container {
+      .footer-card {
+        grid-template-columns: repeat(3, 1fr);
+        text-align: center;
+      }
+    }
+  }
+}
+@media (max-width: 870px) {
+  .footer {
+    .container {
+      .footer-card {
+        grid-template-columns: 1fr;
+        text-align: center;
+      }
+    }
+  }
+}
