--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1058,6 +1058,7 @@ $TextBlack: #22343d;
       color: #22343d;
       margin-right: auto;
       margin-left: auto;
+      max-width: 100%;
       width: 394px;
       font-family: "Poppins";
       font-size: 16px;
