--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -953,6 +953,7 @@ body {
   color: #22343d;
   margin-right: auto;
   margin-left: auto;
+  max-width: 100%;
   width: 394px;
   font-family: "Poppins";
   font-size: 16px;
